# Imusic

./: .gitignore  CONTEXT.md  Imusic.spec  Readme.md  diagnose_output.txt  history.md  inspect_tags.py  list_all_tags.py  main.py  mp3ShazamAutoTag.sublime-project  nuitka-crash-report.xml  pre_release_validation.py  pyproject.toml  requirements.txt  test_output.txt  test_sound_found.json  uv.toml  verify_file_status.py
Imusic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
auto_tag/: acoustid_recognize.py  audio_recognize.py  gui.py  music_library_manager.py  netease_recognize.py  utils.py  version.py
build_tools/: Imusic.spec  build_exe.py  mp3ShazamAutoTag.spec  update_version.py
examples/: converter_example.py
tests/: _verify_rate_limiter.py  conftest.py  debug_failed_search.py  debug_qq_music.py  diagnose_sr.py  sr_incremental.py  sr_quick_test.py  test_acoustid_recognize.py  test_app_flow.py  test_audio_editor.py  test_audio_format_quality.py  test_audio_recognize_refactored.py  test_cache_and_rate_limit.py  test_chinese_english_split.py  test_cloudsearch_api.py  test_converter.py  test_converter_page.py  test_converter_worker.py  test_cookie_expired_dialog.py  test_cookie_refresh.py  test_cover_preview_dialog.py  test_custom_format.py  test_editor_overwrite.py  test_editor_presets.py  test_enhanced_extraction.py  test_fallback_search.py  test_ffmpeg_silent_mode.py  test_filename_check.py  test_format_support.py  test_legacy_import_restriction.py  test_lyric_comprehensive.py  test_lyric_embed.py  test_lyric_fetch.py  test_lyric_manager.py  test_nested_i18n.py  (+21 more)
(+64 files in other folders)
