[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Imusic"
version = "0.5.9.5"
description = "Use shazam to rename and filled the tag of a list of mp3 files."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "ling" }
]
dependencies = [
    "mutagen",
    "shazamio>=0.5.0",
    "unidecode",
    "eyed3",
    "tqdm",
    "soundfile",
    "PySide6",
    "PySide6-Fluent-Widgets",
    "ffmpeg-python>=0.2.0",
    "lrxy>=0.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio",
    "pyinstaller>=6.0"
]

[project.urls]
Homepage = "https://github.com/ling/Imusic"
"Bug Tracker" = "https://github.com/ling/Imusic/issues"

[tool.setuptools.packages.find]
include = ["auto_tag*"]

[tool.setuptools.package-data]
"auto_tag" = ["assets/*.ico", "gui/i18n/locales/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
